Fixed filte date width jumping

--- a/app/less/_open_artists.less
+++ b/app/less/_open_artists.less
@@ -85,6 +85,7 @@
       padding: 0 10px;
       margin: 1px auto 0;
       display: block;
+      width: 95px;
     }
     .edit-section {
       line-height: 72px;
