--- a/app/less/event/event_page_settings.less
+++ b/app/less/event/event_page_settings.less
@@ -20,5 +20,6 @@
     background-color: transparent;
     .text-default-medium;
     outline: none;
+    width: 95px;
   }
 }
